--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
     <main>
-      <my-toolbar is-signed-in="isSignedIn"></my-toolbar>
+      <my-toolbar is-signed-in="isSignedIn" is-paused="isPaused"></my-toolbar>
       <div class="canvasShrinkwrap">
         <canvas id="canvas"></canvas>
         <div id="uiRootElement" class="absolute top z-index:2 width:100% height:100%">
@@ -36,10 +36,6 @@
           <h1>Undoing&hellip;</h1>
           <img src="/assets/images/time-travel.gif" style="height: 6em;">
         </div>
-        <section class="bottom right absolute z-index:2" style="display:none">
-          <a href="#pauseMenu"><img style="height: 3em;" src="/assets/images/questionmark.png"></a>
-          <div id="timeControlButtons" class="display:none"><button id="rewindButton">rewind</button><button id="pauseButton">pause</button><button id="playButton">play</button></div>
-        </section>
         <h1 id="showCurrentInputElement" class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)">
         </h1>
       </div>
