--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
           <h1>Undoing&hellip;</h1>
           <img src="/assets/images/time-travel.gif" style="height: 6em;">
         </div>
-        <h1 id="showCurrentInputElement" class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)">
+        <h1 class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)">
+          $currentInputFeedback
         </h1>
       </div>
     </main>
