--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
     <main>
-      <my-toolbar is-signed-in="isSignedIn" is-paused="isPaused"></my-toolbar>
+      <my-toolbar is-signed-in="isSignedIn" is-paused="isPaused" is-undoing="isUndoing"></my-toolbar>
       <div class="canvasShrinkwrap">
         <canvas id="canvas"></canvas>
         <div id="uiRootElement" class="absolute top z-index:2 width:100% height:100%">
@@ -32,11 +32,11 @@
           <h1 class="text-align:center">You sly devil, you!</h1>
           <h2 class="text-align:center">Press Shift+R to restart</h1>
         </div>
-        <div id="undoFeedbackElement" class="absolute top width:100% height:100% display:none f-col justify-content:center align-items:center z-index:1 ponter-events:none">
+        <div z-show="isUndoing" class="absolute top width:100% height:100% f-col justify-content:center align-items:center z-index:1 ponter-events:none">
           <h1>Undoing&hellip;</h1>
-          <img src="/assets/images/time-travel.gif" style="height: 6em;">
+          <progress max="$completedActionCountBeforeUndo" value="$completedActionCount"/>
         </div>
-        <h1 class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)">
+        <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)">
           $currentInputFeedback
         </h1>
       </div>
