--- a/public/tests/events.html
+++ b/public/tests/events.html
@@ -2,5 +2,6 @@
 <html lang="en">
   <body>
     <button z-click="handleClick">Click me!</button>
+    <button z-click="handleClock">Clock me!</button>
   </body>
 </html>
