--- a/tests/index.html
+++ b/tests/index.html
@@ -8,8 +8,7 @@
     <!-- certain CSS classes are required for certain features -->
     <link rel="stylesheet" href="../src/style.css"/>
     <style>
-/* TODO change selector to [test] */
-.ZuiTestCase {
+[test] {
   display: block;
   border-width: 1rem;
   border-color: rgba(0, 0, 0, 0.5);
