--- a/index.html
+++ b/index.html
@@ -17,17 +17,7 @@
         </div>
         <div id="logElement" class="absolute top z-index:2 height:100% overflow:auto">
         </div>
-        <form class="top right absolute z-index:1" id="devVarsForm" style="display: none">
-          <label class="display:block">
-            <input id="timeScaleInput" type="number" step="0.1" value="1" min="0.1" max="10"> time scale
-          </label>
-          <label class="display:block">
-            <input id="moveTimeInput" type="number" step="1" value="200" min="1" max="2000"> move time (ms)
-          </label>
-          <label class="display:block">
-            <input id="turnTimeInput" type="number" step="1" value="30" min="1" max="2000"> turn time (ms)
-          </label>
-        </form>
+        <my-vars-form z-show="devToolsVarsFormEnabled"></my-vars-form>
         <div id="winMessageElement" class="absolute width:100% height:100% display:none f-col justify-content:center align-items:center z-index:1 ponter-events:none">
           <h1 class="text-align:center">You sly devil, you!</h1>
           <h2 class="text-align:center">Press Shift+R to restart</h1>
