improve request indicator

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="fixed top z-index:3 width:100%" id="flashesElement"></div>
     <dialog id="requestIndicatorElement" class="text-align:center">
       <img style="height:12em" src="/assets/images/rotating-cube.gif"/>
-      <h1><span class="message">bootstrapping</span>&hellip;</h1>
+      <h1><span class="message">booting up</span>&hellip;</h1>
     </dialog>
     <script type="text/JavaScript">
       requestIndicatorElement.showModal()
