properly handle sign out

--- a/public/my-admin-tools.html
+++ b/public/my-admin-tools.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <body>
     <div class="tool-bar">
-    <button class="padding:0"><img src="assets/images/sign-out-icon.gif"></button>
+    <button class="padding:0" hx-trigger="click" hx-post="logout" hx-target="#flashesElement" hx-push-url="false" hx-swap="afterbegin"><img src="assets/images/sign-out-icon.gif"></button>
     <button class="padding:0"><img src="assets/images/save-icon.gif"></button>
     <button class="padding:0"><img src="assets/images/logs-icon.gif"></button>
     <button class="padding:0"><img src="assets/images/vars-icon.gif"></button>
