--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </script>
     <dialog id="signInElement">
       <h1>Sign in</h1>
-      <form class="table rows" action="login/password" method="post" hx-boost="true" hx-target="#flashesElement" hx-push-url="false" hx-on="htmx:responseError" hx-swap="afterbegin">
+      <form class="table rows" action="login/password" method="post" hx-boost="true" hx-target="#flashesElement" hx-push-url="false" hx-swap="afterbegin">
         <p>
           <label for="username">Username</label>
           <input id="username" name="username" type="text" autocomplete="username" required autofocus>
