try defining ServiceWorkerRegistration

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8" />
     <base href="/game">
     <title>Game Demo</title>
+    <script type="text/javascript">
+      window.ServiceWorkerRegistration ||= {};
+    </script>
     <script type="module" src="/src/client.ts"></script>
     <link rel="stylesheet" href="/src/style.css" />
   </head>
