more menu stuff

--- a/public/my-help.html
+++ b/public/my-help.html
@@ -15,7 +15,13 @@
       <li>Find the rooster</li>
       <li>Have fun!!!</li>
       </ul>
-      <button z-click="handleBack">&laquo; Main menu</button>
+      <h2>Found a bug?</h2>
+      <p>
+        <a target="_blank" href="https://github.com/patreeceeo/zomboban/issues">help me squish it!</a>
+      </p>
+      <p>
+        <button class="<a>" z-click="handleBack">&laquo; Main menu</button>
+      </p>
     </dialog>
   </body>
 </html>
