--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
       </div>
       <my-main-menu z-route="`menu`"></my-main-menu>
       <my-help z-route="`help`"></my-help>
+      <my-story z-route="`story`"></my-story>
     </main>
 
     <div class="fixed top z-index:3 width:100%" id="flashesElement"></div>
