--- a/public/my-help.html
+++ b/public/my-help.html
@@ -20,7 +20,7 @@
         <a target="_blank" href="https://github.com/patreeceeo/zomboban/issues">help me squish it!</a>
       </p>
       <p>
-        <button class="<a>" z-click="handleBack">&laquo; Main menu</button>
+        <a href="/#menu">&laquo main menu</a>
       </p>
     </dialog>
   </body>
