--- a/public/my-main-menu.html
+++ b/public/my-main-menu.html
@@ -7,11 +7,15 @@
       <ul>
         <li class="display:flex" style="height:2em">
           <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em" inherit-size></my-img>
-          <button class="<a>" z-click="handlePlay">play</button>
+          <a href="/#game">play</a>
         </li>
         <li class="display:flex" style="height:2em">
           <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
-          <button class="<a>" z-click="handleHelp">help</button>
+          <a href="/#story">story</a>
+        </li>
+        <li class="display:flex" style="height:2em">
+          <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
+          <a href="/#help">help</a>
         </li>
         <li class="display:flex" style="height:2em">
           <my-img id="`star-icon-animated.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
