resume/restart menu options

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           $currentInputFeedback
         </h1>
       </div>
-      <my-main-menu z-route="`menu`"></my-main-menu>
+      <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
       <my-help z-route="`help`"></my-help>
       <my-story z-route="`story`"></my-story>
     </main>
