--- a/public/my-main-menu.html
+++ b/public/my-main-menu.html
@@ -4,6 +4,7 @@
   <body>
     <dialog>
       <h1>Zomboban!</h1>
+      <p>Chaotic block-pushing puzzle adventure</p>
       <ul>
         <li class="display:flex" style="height:2em">
           <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em" inherit-size></my-img>
@@ -26,6 +27,7 @@
           <a href="https://forms.gle/AZb4RknAb9nKhYja9" target="_blank">give feedback</a>
         </li>
       </ul>
+      <small>pre-release demo v0.37</small>
     </dialog>
   </body>
 </html>
