--- a/public/my-story.html
+++ b/public/my-story.html
@@ -4,9 +4,9 @@
     <dialog>
       <h1>Story!</h1>
 
-      <p>You're just a fox who lives among the ruins of an ancient civilization. Many of its artifacts mingle with the flora and fuana, including wandering <b>golem</b>. No one know's much about the civilization who left such a mess, but legend says they worshipped power&hellip;
+      <p>You're just a fox who lives among the ruins of an ancient civilization. Many of its artifacts mingle with the flora and fuana, including freely wandering <b>golem</b>. No one knows much about the civilization who left such a mess, but legend says they worshipped power&hellip;
 
-      <p>Your brother has long been fascinated by these artifacts and the legend surrounding them. Last time you saw him he was going on and on about a <b>dark crystal</b> that can be used to control the golem.</p>
+      <p>Your brother has recently become fascinated by these artifacts and the legend surrounding them. Last time you saw him he was going on and on about a <b>dark crystal</b> that can be used to control the golem.</p>
 
       <p>That was a week ago&hellip;</p>
 
