update error text

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <dialog id="errorMessageElement">
       <h1>Sorry / ごめんなさい</h1>
       <p>Looks like you found a pretty serious bug. Please <a href="https://github.com/patreeceeo/zomboban/issues/">file and issue</a> and I will work on it.</p>
-      <p>In the meantime, though I want to support all browsers/systems/people (that's the promise of the web, after all) try using Google Chrome / <a href="https://www.chromium.org/Home/">Chromium</a>. If you're not already.</p>
+      <p>In the meantime, try loading this page agian without any browser extensions/plugins. That can be done with an "incognito" or "private"<sup>*</sup> tab.</p>
+      <p>Otherwise, though I want to support all browsers/systems/people (that's the promise of the web, after all) try using Google Chrome / <a href="https://www.chromium.org/Home/">Chromium</a>. If you're not already.</p>
+      <sup>*</sup>or whatever your browser calls it</sup>
     </dialog>
     <main>
       <my-toolbar is-signed-in="isSignedIn" is-paused="isPaused" is-undoing="isUndoing"></my-toolbar>
