--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Game Demo</title>
     <script type="text/javascript">
       window.ServiceWorkerRegistration ||= {};
-      window.onerror = function() {
+      window.onerror = function(error) {
+        errorMessageElement.querySelector(".errorMessage").innerText = error
         errorMessageElement.showModal();
       }
     </script>
@@ -17,6 +18,7 @@
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
     <dialog id="errorMessageElement">
       <h1>Sorry / ごめんなさい</h1>
+      <pre class="errorMessage"></pre>
       <p>Looks like you found a pretty serious bug. Please <a href="https://github.com/patreeceeo/zomboban/issues/">file and issue</a> and I will work on it.</p>
       <p>In the meantime, try loading this page agian without any browser extensions/plugins. That can be done with an "incognito" or "private"<sup>*</sup> tab.</p>
       <p>Otherwise, though I want to support all browsers/systems/people (that's the promise of the web, after all) try using Google Chrome / <a href="https://www.chromium.org/Home/">Chromium</a>. If you're not already.</p>
