--- a/public/my-help.html
+++ b/public/my-help.html
@@ -12,7 +12,7 @@
       </dl>
       <h2>Goals</h2>
       <ul>
-      <li>Find the rooster</li>
+      <li>Find the computer terminal</li>
       <li>Have fun!!!</li>
       </ul>
       <h2>Found a bug?</h2>
