--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)">
           $currentInputFeedback
         </h1>
-        <h1 z-show="savedMessageCountdown" class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% + 4em)">Saving $savedChangeCount changes.</h1>
+        <h1 z-show="savedMessageCountdown" class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% + 4em)">Saving $savedChangeCount changes&hellip;</h1>
       </div>
       <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
       <my-help z-route="`help`"></my-help>
