--- a/public/my-help.html
+++ b/public/my-help.html
@@ -12,7 +12,10 @@
       </dl>
       <h2>Goals</h2>
       <ul>
-      <li>Find the computer terminal</li>
+      <p class="text-align:center">
+      <my-img id='`terminal.gif`'></my-img>
+      </p>
+      <li>Find the green crystal box</li>
       <li>Have fun!!!</li>
       </ul>
       <h2>Found a bug?</h2>
