update level selector when level changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <div class="canvasShrinkwrap">
         <div class="display:flex">
-          <my-admin-tools z-show="isSignedIn"></my-admin-tools>
+          <my-admin-tools z-show="isSignedIn" current-level-id="currentLevelId"></my-admin-tools>
           <my-toolbar is-paused="isPaused" is-undoing="isUndoing"></my-toolbar>
         </div>
         <canvas id="canvas"></canvas>
