--- a/public/my-admin-tools.html
+++ b/public/my-admin-tools.html
@@ -8,7 +8,7 @@
       <button class="padding:0"><img src="assets/images/logs-icon.gif"></button>
       <button class="padding:0"><img src="assets/images/vars-icon.gif"></button>
       <button class="padding:0"><img src="assets/images/feedback-icon.gif"></button>
-      <select z-change="handleSelectLevel">
+      <select z-change="handleSelectLevel" value="$currentLevelId">
         <option value="0">level 1</option>
         <option value="1">level 2</option>
       </select>
