temporarily comment out input feedback

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
           <h1>Undoing&hellip;</h1>
           <progress max="$completedActionCountBeforeUndo" value="$completedActionCount"/>
         </div>
-        <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)">
-          $currentInputFeedback
-        </h1>
+        <!-- TODO uncomment -->
+        <!-- <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)"> -->
+        <!--   $currentInputFeedback -->
+        <!-- </h1> -->
         <h1 z-show="savedMessageCountdown" class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% + 4em)">Saving $savedChangeCount changes&hellip;</h1>
       </div>
       <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
