--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h1 class="text-align:center">You sly devil, you!</h1>
           <h2 class="text-align:center">Press Shift+R to restart</h1>
         </div>
-        <div z-hide-until-init z-show="isUndoing" class="absolute top width:100% height:100% f-col justify-content:center align-items:center z-index:1 ponter-events:none">
+        <div z-hide-until-init z-show="isUndoing" class="absolute bottom width:100% left f-col justify-content:center align-items:center z-index:1 ponter-events:none">
           <h1>Undoing&hellip;</h1>
           <progress max="$completedActionCountBeforeUndo" value="$completedActionCount"/>
         </div>
