--- a/public/my-main-menu.html
+++ b/public/my-main-menu.html
@@ -12,15 +12,15 @@
         </li>
         <li class="display:flex" style="height:2em" z-hide="isAtStart">
           <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em" inherit-size></my-img>
-          <a href="/#game">resume</a>
+          <a href="#game">resume</a>
         </li>
         <li class="display:flex" style="height:2em">
           <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
-          <a href="/#story">story</a>
+          <a href="#story">story</a>
         </li>
         <li class="display:flex" style="height:2em">
           <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
-          <a href="/#help">help</a>
+          <a href="#help">help</a>
         </li>
         <li class="display:flex" style="height:2em">
           <my-img id="`star-icon-animated.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
