--- a/public/my-help.html
+++ b/public/my-help.html
@@ -23,7 +23,7 @@
         <a target="_blank" href="https://github.com/patreeceeo/zomboban/issues">help me squish it!</a>
       </p>
       <p>
-        <a href="/#menu">&laquo main menu</a>
+        <a href="#menu">&laquo main menu</a>
       </p>
     </dialog>
   </body>
