--- a/public/my-story.html
+++ b/public/my-story.html
@@ -11,7 +11,7 @@
       <p>That was a week ago&hellip;</p>
 
       <p>
-        <a href="/#menu">&laquo main menu</a>
+        <a href="#menu">&laquo main menu</a>
       </p>
     </dialog>
   </body>
