conditional base href

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <base href="/game">
+    <base href="" id="baseElement">
     <title>Game Demo</title>
     <script type="text/javascript">
       window.ServiceWorkerRegistration ||= {};
