--- a/index.html
+++ b/index.html
@@ -40,21 +40,28 @@
         <!-- <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)"> -->
         <!--   $currentInputFeedback -->
         <!-- </h1> -->
-        <h1 z-show="savedMessageCountdown" class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% + 4em)">Saving $savedChangeCount changes&hellip;</h1>
+        <h1 z-hide-until-init z-show="savedMessageCountdown" class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% + 4em)">Saving $savedChangeCount changes&hellip;</h1>
       </div>
-      <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
-      <my-help z-route="`help`"></my-help>
-      <my-story z-route="`story`"></my-story>
+      <dialog id="modal" z-show="showModal">
+        <my-main-menu z-route="`menu`" is-at-start="isAtStart"></my-main-menu>
+        <my-help z-route="`help`"></my-help>
+        <my-story z-route="`story`"></my-story>
+        <div z-show="loadingItems">
+          <div class="RequestIndicator">
+            <div class="RequestIndicator-progress">
+              <img src="/assets/images/rotating-cube.gif"/>
+              <progress z-hide-until-init max="1" value="$loadingProgress"></progress>
+            </div>
+            <h1 class="RequestIndicator-message">loading<span z-hide-until-init> $loadingGroupDescription</span>&hellip;</h1>
+          </div>
+        </div>
+      </dialog>
     </main>
-
-    <div class="fixed top z-index:3 width:100%" id="flashesElement"></div>
-    <dialog id="requestIndicatorElement" class="text-align:center">
-      <img style="height:12em" src="/assets/images/rotating-cube.gif"/>
-      <h1><span class="message">booting up</span>&hellip;</h1>
-    </dialog>
-    <script type="text/JavaScript">
-      requestIndicatorElement.showModal()
+    <script>
+      modal.showModal();
     </script>
+    <div class="fixed top z-index:3 width:100%" id="flashesElement"></div>
+    </dialog>
     <my-sign-in-form></my-sign-in-form>
   </body>
 </html>
