--- a/public/my-vars-form.html
+++ b/public/my-vars-form.html
@@ -2,9 +2,9 @@
 <!doctype html>
 <html lang="en">
   <body>
-    <form class="top right absolute z-index:1">
+    <form>
       <label class="display:block">
-        <input z-change="timeScale" type="number" step="0.1" value="1" min="0.1" max="10"> time scale
+        <input z-change="changeTimeScale" type="number" step="0.1" value="1" min="0.1" max="10"> time scale
       </label>
       <label class="display:block">
         <input z-change="moveTime" type="number" step="1" value="200" min="1" max="2000"> move time (ms)
