--- a/public/my-main-menu.html
+++ b/public/my-main-menu.html
@@ -1,29 +1,52 @@
-
 <!doctype html>
 <html lang="en">
   <body>
     <h1>Zomboban!</h1>
     <p>Chaotic block-pushing puzzle adventure</p>
     <ul>
-      <li class="display:flex" style="height:2em">
-        <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em" inherit-size></my-img>
+      <li class="display:flex" style="height: 2em">
+        <my-img
+          id="`star-icon.gif`"
+          class="display:flex margin-right:0.5em"
+          style="height: 1.5em"
+          inherit-size
+        ></my-img>
         <button class="<a>" z-click="handleRestart">start</button>
       </li>
-      <li class="display:flex" style="height:2em" z-hide="isAtStart">
-        <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em" inherit-size></my-img>
+      <li class="display:flex" style="height: 2em" z-hide="isAtStart">
+        <my-img
+          id="`star-icon.gif`"
+          class="display:flex margin-right:0.5em"
+          style="height: 1.5em"
+          inherit-size
+        ></my-img>
         <a href="#game">resume</a>
       </li>
-      <li class="display:flex" style="height:2em">
-        <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
+      <li class="display:flex" style="height: 2em">
+        <my-img
+          id="`star-icon.gif`"
+          class="display:flex margin-right:0.5em"
+          style="height: 1.5em"
+        ></my-img>
         <a href="#story">story</a>
       </li>
-      <li class="display:flex" style="height:2em">
-        <my-img id="`star-icon.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
+      <li class="display:flex" style="height: 2em">
+        <my-img
+          id="`star-icon.gif`"
+          class="display:flex margin-right:0.5em"
+          style="height: 1.5em"
+        ></my-img>
         <a href="#help">help</a>
       </li>
-      <li class="display:flex" style="height:2em">
-        <my-img id="`star-icon-animated.gif`" class="display:flex margin-right:0.5em" style="height: 1.5em"></my-img>
-        <a href="https://forms.gle/AZb4RknAb9nKhYja9" target="_blank">give feedback</a>
+      <li class="display:flex" style="height: 2em">
+        <my-img
+          id="`star-icon-animated.gif`"
+          class="display:flex margin-right:0.5em"
+          style="height: 1.5em"
+        ></my-img>
+        <a href="https://forms.gle/AZb4RknAb9nKhYja9" target="_blank"
+          >give feedback</a
+        >
       </li>
     </ul>
     <small>pre-release demo v0.37</small>
