--- a/public/my-toolbar.html
+++ b/public/my-toolbar.html
@@ -1,13 +1,26 @@
-
 <!doctype html>
 <html lang="en">
   <body>
     <section class="tool-bar">
-      <button class="padding:0" z-click="handleRestart"><my-img id="`reset-icon.gif`"></my-img></button>
-      <button class="padding:0" z-click="handleRewind" z-class='{"is-pressed": "isUndoing"}'><my-img id="`rewind-icon.gif`"></my-img></button>
-      <button class="padding:0" z-click="handlePlay" z-show="isNotPlaying"><my-img id="`play-icon.gif`"></my-img></button>
-      <button class="padding:0" z-click="handlePause" z-hide="isNotPlaying"><my-img id="`pause-icon.gif`"></my-img></button>
-      <button class="padding:0" z-click="handlePressMenu"><my-img id="`menu-icon.gif`"></my-img></button>
+      <button class="padding:0" z-click="handleRestart">
+        <my-img id="`reset-icon.gif`"></my-img>
+      </button>
+      <button
+        class="padding:0"
+        z-click="handleRewind"
+        z-class='{"is-pressed": "isUndoing"}'
+      >
+        <my-img id="`rewind-icon.gif`"></my-img>
+      </button>
+      <button class="padding:0" z-click="handlePlay" z-show="isNotPlaying">
+        <my-img id="`play-icon.gif`"></my-img>
+      </button>
+      <button class="padding:0" z-click="handlePause" z-hide="isNotPlaying">
+        <my-img id="`pause-icon.gif`"></my-img>
+      </button>
+      <button class="padding:0" z-click="handlePressMenu">
+        <my-img id="`menu-icon.gif`"></my-img>
+      </button>
     </section>
   </body>
 </html>
