--- a/public/my-vars-form.html
+++ b/public/my-vars-form.html
@@ -1,16 +1,39 @@
-
 <!doctype html>
 <html lang="en">
   <body>
     <form>
       <label class="display:block">
-        <input z-change="changeTimeScale" type="number" step="0.1" value="1" min="0.1" max="10"> time scale
+        <input
+          z-change="changeTimeScale"
+          type="number"
+          step="0.1"
+          value="1"
+          min="0.1"
+          max="10"
+        />
+        time scale
       </label>
       <label class="display:block">
-        <input z-change="moveTime" type="number" step="1" value="200" min="1" max="2000"> move time (ms)
+        <input
+          z-change="moveTime"
+          type="number"
+          step="1"
+          value="200"
+          min="1"
+          max="2000"
+        />
+        move time (ms)
       </label>
       <label class="display:block">
-        <input z-change="turnTime" type="number" step="1" value="30" min="1" max="2000"> turn time (ms)
+        <input
+          z-change="turnTime"
+          type="number"
+          step="1"
+          value="30"
+          min="1"
+          max="2000"
+        />
+        turn time (ms)
       </label>
     </form>
   </body>
