--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="canvasShrinkwrap">
         <div class="display:flex">
           <my-admin-tools z-show="isSignedIn" current-level-id="currentLevelId"></my-admin-tools>
-          <my-toolbar is-paused="isPaused" is-undoing="isUndoing"></my-toolbar>
+          <my-toolbar is-paused="isPaused" is-undoing="isUndoing" is-signed-in="isSignedIn"></my-toolbar>
         </div>
         <canvas id="canvas"></canvas>
         <my-vars-form z-show="devToolsVarsFormEnabled" class="bottom right absolute z-index:1"></my-vars-form>
