--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <noscript><h1>Sorry, but JavaScript must be <a href="https://www.wikihow.com/Enable-JavaScript">enabled</a> to play.</h1></noscript>
     <dialog id="errorMessageElement">
-      <h1>Sorry / ごめんなさい</h1>
+      <h1>Sorry</h1>
       <pre class="errorMessage"></pre>
       <p>Looks like you found a pretty serious bug. Please <a href="https://github.com/patreeceeo/zomboban/issues/">file an issue</a> and I will work on it.</p>
       <p>In the meantime, try loading this page agian without any browser extensions/plugins. That can be done with an "incognito" or "private"<sup>*</sup> tab.</p>
