--- a/public/my-main-menu.html
+++ b/public/my-main-menu.html
@@ -4,7 +4,7 @@
     <h1>Zomboban!</h1>
     <p>Chaotic block-pushing puzzle adventure</p>
     <ul>
-      <li class="display:flex" style="height: 2em">
+      <li class="display:flex" style="height: 2em" z-show="isAtStart">
         <my-img
           id="`star-icon.gif`"
           class="display:flex margin-right:0.5em"
@@ -38,17 +38,6 @@
         ></my-img>
         <a href="#help">help</a>
       </li>
-      <li class="display:flex" style="height: 2em">
-        <my-img
-          id="`star-icon-animated.gif`"
-          class="display:flex margin-right:0.5em"
-          style="height: 1.5em"
-        ></my-img>
-        <a href="https://forms.gle/AZb4RknAb9nKhYja9" target="_blank"
-          >give feedback</a
-        >
-      </li>
     </ul>
-    <small>pre-release demo v0.37</small>
   </body>
 </html>
