replace story with dev roadmap

--- a/public/my-main-menu.html
+++ b/public/my-main-menu.html
@@ -28,7 +28,7 @@
           class="display:flex margin-right:0.5em"
           style="height: 1.5em"
         ></my-img>
-        <a href="#story">story</a>
+        <a href="#help">help</a>
       </li>
       <li class="display:flex" style="height: 2em">
         <my-img
@@ -36,7 +36,7 @@
           class="display:flex margin-right:0.5em"
           style="height: 1.5em"
         ></my-img>
-        <a href="#help">help</a>
+        <a href="https://github.com/users/patreeceeo/projects/2/" target="_blank">dev roadmap</a>
       </li>
     </ul>
   </body>
