--- a/public/my-toolbar.html
+++ b/public/my-toolbar.html
@@ -7,8 +7,7 @@
       </button>
       <button
         class="padding:0"
-        z-click="handleRewind"
-        z-class='{"is-pressed": "isUndoing"}'
+        z-click="handleRestart"
       >
         <my-img id="`reset-icon.gif`"></my-img>
       </button>
