--- a/public/my-toolbar.html
+++ b/public/my-toolbar.html
@@ -27,6 +27,12 @@
       <button class="padding:0" z-click="handlePressMenu">
         <my-img id="`menu-icon.gif`"></my-img>
       </button>
+      <button class="padding:0" z-click="handleZoomIn">
+        <my-img id="`zoom-in-icon.gif`"></my-img>
+      </button>
+      <button class="padding:0" z-click="handleZoomOut">
+        <my-img id="`zoom-out-icon.gif`"></my-img>
+      </button>
     </section>
   </body>
 </html>
