space below toolbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </dialog>
     <main>
       <div class="canvasShrinkwrap">
-        <div class="display:flex">
+        <div class="display:flex" style="margin-bottom: 2rem">
           <my-admin-tools z-show="isSignedIn" current-level-id="currentLevelId"></my-admin-tools>
           <my-toolbar is-paused="isPaused" is-undoing="isUndoing" is-signed-in="isSignedIn"></my-toolbar>
         </div>
