toolbar size/position

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <div class="canvasShrinkwrap">
         <canvas id="canvas"></canvas>
-        <div class="display:flex justify-content:center" style="margin-top: 2rem">
+        <div class="display:flex justify-content:center">
           <my-admin-tools z-show="isSignedIn" current-level-id="currentLevelId"></my-admin-tools>
           <my-toolbar is-paused="isPaused" is-undoing="isUndoing" is-signed-in="isSignedIn"></my-toolbar>
         </div>
