--- a/public/my-admin-tools.html
+++ b/public/my-admin-tools.html
@@ -28,6 +28,7 @@
       <select z-change="handleSelectLevel" value="$currentLevelId">
         <option value="0">level 1</option>
         <option value="1">level 2</option>
+        <option value="2">level 3</option>
       </select>
     </section>
   </body>
