--- a/index.html
+++ b/index.html
@@ -29,13 +29,9 @@
         <canvas id="canvas"></canvas>
         <div class="display:flex justify-content:center">
           <my-admin-tools z-show="isSignedIn" current-level-id="currentLevelId"></my-admin-tools>
-          <my-toolbar is-paused="isPaused" is-undoing="isUndoing" is-signed-in="isSignedIn"></my-toolbar>
+          <my-toolbar is-paused="isPaused" is-signed-in="isSignedIn"></my-toolbar>
         </div>
         <my-vars-form z-show="devToolsVarsFormEnabled" class="bottom right absolute z-index:1"></my-vars-form>
-        <div z-hide-until-init z-show="isUndoing" class="absolute bottom width:100% left f-col justify-content:center align-items:center z-index:1 ponter-events:none">
-          <h1>Undoing&hellip;</h1>
-          <progress max="$completedActionCountBeforeUndo" value="$completedActionCount"/>
-        </div>
         <!-- TODO uncomment -->
         <!-- <h1 z-hide-until-init class="absolute width:100% z-index:1 ponter-events:none text-align:center" style="top: calc(50% - 4em)"> -->
         <!--   $currentInputFeedback -->
